# qemu

./: .cirrus.yml  .gitignore  .gitlab-ci.yml  .gitmodules  BRANES.rst  MAINTAINERS  README.rst  block.c  blockdev.c  configure  hmp-commands.hx  meson.build  meson_options.txt  pythondeps.toml  qemu-options.hx
.distro/: Makefile  Makefile.common  qemu-guest-agent.service  qemu-kvm.spec.template  rpminspect.yaml
.distro/scripts/: extract_build_cmd.py  frh.py  process-patches.sh
.gitlab-ci.d/: base.yml  buildtest-template.yml  buildtest.yml  check-dco.py  check-patch.py  cirrus.yml  container-cross.yml  container-template.yml  crossbuild-template.yml  crossbuilds.yml  edk2.yml  opensbi.yml  rules.yml  static_checks.yml  windows.yml  workflow.yml
.gitlab-ci.d/cirrus/: build.yml  freebsd-12.vars  freebsd-13.vars  freebsd-14.vars  kvm-build.yml
.gitlab-ci.d/custom-runners/: centos-stream-8-x86_64.yml  ubuntu-20.04-s390x.yml  ubuntu-22.04-aarch32.yml  ubuntu-22.04-aarch64.yml
accel/kvm/: kvm-all.c
backends/tpm/: tpm_emulator.c  trace-events
block/: qapi-sysemu.c  qapi.c  qcow2.c  rbd.c
block/monitor/: block-hmp-cmds.c
chardev/: char-socket.c  char.c
crypto/: cipher-builtin.c.inc  cipher-gnutls.c.inc  cipher.c  des.c  desrfb.c  hash-gcrypt.c  hash-gnutls.c  hash-nettle.c  hmac-gnutls.c  init.c  meson.build  tlscreds.c  tlscredsanon.c  tlscredspriv.h  tlscredspsk.c  tlscredsx509.c  tlssession.c
docs/: meson.build
docs/_templates/: editpage.html
docs/about/: deprecated.rst
docs/devel/: ci-jobs.rst
docs/system/: deprecated.rst  removed-features.rst  tls.rst
docs/system/i386/: amd-memory-encryption.rst
hw/acpi/: aml-build.c  ich9.c
hw/arm/: virt.c
hw/block/: virtio-blk.c
hw/core/: machine-qmp-cmds.c  machine.c
hw/display/: virtio-gpu.c
hw/i386/: acpi-build.c  amd_iommu.c  amd_iommu.h  fw_cfg.c  pc.c  pc_piix.c  pc_q35.c  pc_sysfw_guid_parse.c  x86.c
hw/isa/: lpc_ich9.c
hw/net/: igbvf.c  virtio-net.c  vmxnet3.c
hw/net/can/: xlnx-versal-canfd.c
hw/pci/: pci.c
hw/ppc/: spapr.c  spapr_cpu_core.c
hw/s390x/: s390-virtio-ccw.c  virtio-ccw.c
hw/scsi/: spapr_vscsi.c  virtio-scsi.c
hw/smbios/: smbios.c
hw/tpm/: tpm_crb_svsm.c  tpm_tis_isa.c
hw/usb/: dev-mtp.c  hcd-uhci.c
hw/vfio/: container.c  iommufd.c  pci.c  spapr.c
hw/virtio/: vdpa-dev.c  vhost-user-test-device.c  virtio-balloon.c  virtio-bus.c  virtio-mem.c  virtio-mmio.c  virtio-pci.c
hw/watchdog/: wdt_i6300esb.c
include/crypto/: des.h  hash.h  tlscreds.h  tlscredsx509.h
include/hw/: boards.h
include/hw/acpi/: ich9.h
include/hw/i386/: pc.h
include/hw/ppc/: spapr.h
include/io/: channel.h
include/migration/: colo.h  global_state.h
include/qapi/: util.h
include/qapi/qmp/: dispatch.h
include/sysemu/: tpm.h
io/: channel-buffer.c  channel-file.c  channel.c
linux-headers/linux/: kvm.h
linux-user/: elfload.c
migration/: channel.c  colo.c  file.c  file.h  global_state.c  migration.c  migration.h  postcopy-ram.c  postcopy-ram.h  qemu-file.c  qemu-file.h  ram.c  ram.h  savevm.c  savevm.h  trace-events  vmstate.c
monitor/: hmp-cmds.c
qapi/: block-core.json  block.json  crypto.json  migration.json  qapi-util.c  qmp-registry.c  qobject-output-visitor.c  qom.json  sockets.json
qga/: main.c  qapi-schema.json
scripts/: analyze-migration.py  meson-buildoptions.sh  qapi-types.py  qapi-visit.py  qapi.py
scripts/qapi/: commands.py  gen.py  parser.py  schema.py  source.py
system/: vl.c
tests/: Makefile.include
tests/avocado/: replay_kernel.py
tests/docker/dockerfiles/: alpine.docker  centos7.docker  centos8.docker  debian-amd64-cross.docker  debian-arm64-cross.docker  debian-armel-cross.docker  debian-armhf-cross.docker  debian-i686-cross.docker  debian-mips64el-cross.docker  fedora.docker  (+5 more)
tests/functional/: meson.build  test_acpi_bits.py  test_arm_canona1100.py  test_arm_n8x0.py  test_avr_mega2560.py  test_loongarch64_virt.py  test_m68k_nextcube.py  test_microblaze_s3adsp1800.py  test_microblazeel_s3adsp1800.py  test_netdev_ethtool.py  test_ppc64_hv.py  test_ppc64_powernv.py  test_ppc64_pseries.py  test_ppc_405.py  test_ppc_40p.py  test_ppc_amiga.py  test_ppc_bamboo.py  test_ppc_mpc8544ds.py  test_ppc_virtex_ml507.py  test_rx_gdbsim.py  test_s390x_ccw_virtio.py  test_sparc64_sun4u.py  test_virtio_gpu.py  test_x86_cpu_model_versions.py
tests/functional/qemu_test/: asset.py  cmd.py  testcase.py
tests/qemu-iotests/: 140  140.out
tests/qtest/: arm-cpu-features.c  meson.build  migration-test.c
tests/unit/: test-crypto-block.c  test-crypto-hash.c  test-crypto-hmac.c  test-crypto-ivgen.c  test-crypto-pbkdf.c  test-crypto-tlscredsx509.c
tools/virtiofsd/: passthrough_ll.c
ui/: vnc-auth-sasl.c  vnc.c  vnc.h
util/: qemu-sockets.c
(+3 files in other folders)
